-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.2
-
None
-
-
7bd243b3fb (qt/qtbase/dev) 06d67a7a2a (qt/qtbase/6.2) 82149f2c9b (qt/qtbase/6.3) 06d67a7a2a (qt/tqtc-qtbase/6.2) 82149f2c9b (qt/tqtc-qtbase/6.3) 7bd243b3fb (qt/tqtc-qtbase/dev)
does NOT happen on windows
Minimum compileable example:
- Load the "Combo Widget Mapper" example project
- in file "window.cpp" after line 73, add this: typeComboBox->setEditable(true);
- run
- click the "Type" combo box to drop the box down
- use ARROW KEY to move selection to new menu item
- press RETURN/ENTER key to enter it
- <--- exception is thrown here